@@ -4,6 +4,10 @@ Changelog
 1.0RC1 (unreleased)
 -------------------
 
+- Show "moderate comments" link in the admin panel only if a moderation 
+  workflow is enabled for comments.
+  [timo]
+
 - Do not allow to change the mail settings in the discussion control panel, if 
   there is no valid mail setup.
   [timo]
